updated gitignore for Android project

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 .DS_Store
+
+#iOS
 example/ios/exampleLocalNotifications.xcodeproj/xcuserdata/*
 example/ios/exampleLocalNotifications.xcodeproj/project.xcworkspace/*
 example/ios/CordovaLib/CordovaLib.xcodeproj/xcuserdata/*
 example/ios/www/*
 !example/ios/www/cordova-2.3.0.js
+
+#Android
+example/android/bin/*
+example/android/gen/*
+example/android/.classpath
+example/android/local.properties
+
