--- a/plugin.xml
+++ b/plugin.xml
@@ -32,6 +32,7 @@
     </config-file>
     
     <config-file target="AndroidManifest.xml" parent="/manifest">
+    	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     	<uses-permission android:name="android.permission.VIBRATE" />
     </config-file>   
     
